--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-image: url('media/2025cd371f0a3bd1e06150458875a533.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
+</head>
+<body>
 <!--
 function _0x27fc() {
     const _0x52cf91 = ['constructo', '\x20Original\x20', 'exports', '(((.+)+)+)', 'Fork..\x20Use', 'mIsuh', '7|12|8|14|', 'Version\x20==', '11|4|1|2|3',
@@ -3177,3 +3190,5 @@ function _0x32975a(_0x5ee4e9, _0x2470a8, _0x17f3ba, _0x579edb) {
 }
 module[_0x4b01dc(-0x209, -0x1ef, -0x1ff, -0x224)] = ravindu01manoj;
 -->
+</body>
+</html>
