--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 <style>
+  <!--
 body {
   background-image: url('media/2025cd371f0a3bd1e06150458875a533.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-}
+} -->
 </style>
 </head>
 <body></br></br>
-<a href="/ravindu01manoj">About</a>
+<a href="/ravindu01manoj/about">About Us</a>
 </br></br></br></br>
 This Home Page Comming soon...
 </body>
